--- a/Aula1/index.html
+++ b/Aula1/index.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
     <title>Curso de Java Script</title>
 </head>
+
 <body>
-    <header><h1>Curso JavaScript</h1></header>
+    <header>
+        <h1>Curso JavaScript</h1>
+    </header>
     <main>
         <h2>Vamos à aula</h2>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque fugit deserunt libero, provident iste quaerat! Hic, expedita sint, architecto possimus, ullam a minus quam ad veritatis reprehenderit voluptate! Ullam, repudiandae!</p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque fugit deserunt libero, provident iste
+            quaerat! Hic, expedita sint, architecto possimus, ullam a minus quam ad veritatis reprehenderit voluptate!
+            Ullam, repudiandae!
+        </p>
     </main>
 
     <script src="script.js"></script>
-        
+
+
+
 </body>
+
 </html>
