--- a/Aula1/index.html
+++ b/Aula1/index.html
@@ -13,13 +13,9 @@
         <h1>Curso JavaScript</h1>
     </header>
     <main>
-        <h2>Vamos à aula</h2>
+        <h2>Vamos à aula:</h2>
 
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque fugit deserunt libero, provident iste
-            quaerat! Hic, expedita sint, architecto possimus, ullam a minus quam ad veritatis reprehenderit voluptate!
-            Ullam, repudiandae!
-        </p>
+        
     </main>
 
     <script src="script.js"></script>
