--- a/Aula1/index.html
+++ b/Aula1/index.html
@@ -15,7 +15,7 @@
     <main>
         <h2>Vamos à aula:</h2>
 
-        
+        <p id="mao">Mão na massa</p>
     </main>
 
     <script src="script.js"></script>
