--- a/Aula1/index.html
+++ b/Aula1/index.html
@@ -13,9 +13,17 @@
         <h1>Curso JavaScript</h1>
     </header>
     <main>
-        <h2>Vamos à aula:</h2>
+        <div>
+            <h2>Vamos à aula:</h2>
+            <p id="mao">Mão na massa!!!</p>
+        </div>
 
-        <p id="mao">Mão na massa</p>
+        <div id="area">
+            Interaja...
+
+        </div>
+
+
     </main>
 
     <script src="script.js"></script>
