--- a/Aula1/index.html
+++ b/Aula1/index.html
@@ -18,7 +18,7 @@
             <p id="mao">Mão na massa!!!</p>
         </div>
 
-        <div id="area">
+        <div id="area" onclick="clicar()" onmouseenter="entrar()" onmouseout="sair()">
             Interaja...
 
         </div>
