--- a/Aula2/index.html
+++ b/Aula2/index.html
@@ -26,7 +26,7 @@
 
          <input type="button" value="Somar" onclick="somar()" id="button">
 
-         <h3>Resultado</h3>
+         <h3>Resultado:</h3>
          <div id="res">
 
          </div>
