--- a/Aula1/index.html
+++ b/Aula1/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css">
+
     <title>Curso de Java Script</title>
 </head>
 
@@ -21,7 +26,24 @@
         <div id="area">
             Interaja...
 
+        </div><br>
+
+        <div class="fa fa-list" id="list">
+
         </div>
+      
+        <div id="menu">
+            <ul id="itens">
+                <li><a href="https://www.youtube.com/" target="_blank">Opção 1</a></li>
+                <li><a href="https://www.youtube.com/" target="_blank">Opção 2</a></li>
+                <li><a href="https://www.youtube.com/" target="_blank">Opção 3</a></li>
+                <li><a href="https://www.youtube.com/" target="_blank">Opção 4</a></li>
+                <li><a href="https://www.youtube.com/" target="_blank">Opção 5</a></li>
+                <li><a href="https://www.youtube.com/" target="_blank">Opção 6</a></li>
+            </ul>
+
+        </div>
+
 
 
     </main>
