--- a/Aula2/index.html
+++ b/Aula2/index.html
@@ -20,15 +20,20 @@
 
         <div id="area">
 
-         <input type="number" name="num" id="num">
-          <div><strong>+</strong></div>
-         <input type="number" name="num2" id="num2">
+         <form>
+             <input type="number" name="num" id="num" placeholder="Adicione um número...">
+              <div><strong>+</strong></div>
+             <input type="number" name="num2" id="num2" placeholder="Adicione um número...">
+             <input type="button" value="Somar" id="button">
+             <input type="reset"  value="Limpar" id="limp">
 
-         <input type="button" value="Somar" onclick="somar()" id="button">
 
-         <h3>Resultado:</h3>
+              <h3>Resultado:</h3>
          
          <div id="res">
+         </form>
+
+        
 
          </div>
 
