praticando if else

--- a/Aula3/index.html
+++ b/Aula3/index.html
@@ -14,10 +14,12 @@
     <h2>Em qual país você nasceu?</h2>
     <div id="info">
         <div id="form">
-            <input type="text" id="pais" name="pais">            
-            <input type="reset" value="Limpar" id="clean">
+            <form>
+                <input type="text" id="pais" name="pais">
+                <input type="reset" value="Limpar" id="clean">
+            </form>
         </div>
-        <input type="submit" value="Verificar" name="valid" id="valid" onclick="verific()">
+        <input type="submit" value="Verificar" name="valid" id="valid">
     </div>
     <div id="nacional"></div>
 </main>
