--- a/Aula3/index.html
+++ b/Aula3/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css">
+
+
     <title>Condições</title>
 </head>
 <body>
@@ -22,6 +28,13 @@
         <input type="submit" value="Verificar" name="valid" id="valid">
     </div>
     <div id="nacional"></div>
+    <div class="fa fa-eye" id="eye"></div>
+    <div class="image" id="image"><img src="imagens/brasil1.jpg" alt=""></div>
+
+
+
+
+
 </main>
     
 <script src="script.js"></script>
