--- a/Aula3/index.html
+++ b/Aula3/index.html
@@ -31,7 +31,10 @@
     <div class="fa fa-eye" id="eye"></div>
     <div class="image" id="image"><img src="imagens/brasil1.jpg" alt=""></div>
 
+    <input type="submit" value="Ver hora" id="moment">
+    <input type="submit" value="Atualizar" id="restart">
 
+    <div id="hora"> </div>
 
 
 
