--- a/Aula4/index.html
+++ b/Aula4/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="imagens/cardicon.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">
-    <title>Switch</title>
+    <title>Cardápio Usando Switch</title>
 </head>
 
 <body>
