--- a/exercicios/exercicio1/index.html
+++ b/exercicios/exercicio1/index.html
@@ -20,7 +20,7 @@
     </section>
 
     <footer>
-        &copy; Thiago Madeira da Rocha
+        <div id="copy">&copy; Thiago Madeira da Rocha</div>
     </footer>
     
     <script src="script.js"></script>
