--- a/exercicio3/index.html
+++ b/exercicio3/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        Verificador de gênero e faixa etária
+        Verificador de faixa etária
     </header>
 
     <main>
