--- a/exercicio4/index.html
+++ b/exercicio4/index.html
@@ -22,15 +22,15 @@
         <div id="form">
             <form>
                 <div id="camp1">
-                    <label for="inicio">Início:</label>
+                    <label for="inicio" id="on">De:</label>
                     <input type="number" id="inicio">
                 </div>
                 <div id="camp2">
-                    <label for="fim">Fim:</label>
+                    <label for="fim" id="finish">Até:</label>
                     <input type="number" id="fim" >
                 </div>
                 <div id="camp2">
-                    <label for="adic">Passo:</label>
+                    <label for="adic">Intervalo:</label>
                     <input type="number" id="adic">
                 </div>
                 <div id="cont">
