--- a/exercicio5/index.html
+++ b/exercicio5/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poiret+One&family=Teko:wght@300..700&family=Yanone+Kaffeesatz:wght@200..700&display=swap" rel="stylesheet">
-    <title>Modelo</title>
+    <title>Tabuada</title>
 </head>
 <body>
     <header>
