--- a/exercicio5/index.html
+++ b/exercicio5/index.html
@@ -31,6 +31,7 @@
         <div id="tabuada-container">
             <select name="tabuada" id="tabuada" size="10"></select>
         </div>
+        <div id="texto"></div>
        
     </main>
 
