--- a/exercicio_array/index.html
+++ b/exercicio_array/index.html
@@ -19,7 +19,8 @@
             <p>Número (entre 1 e 100): <input type="number" min="0" id="numero" name="numero"> 
             <input type="button" value="Adicionar" id="add"></p>
             <p><select name="valores" id="valores" size="8"></select></p>
-            <input type="button" value="Finalizar" id="fim">
+            <input type="button" value=" Finalizar " id="fim">
+            <input type="button" value=" Reiniciar " id="atualizar">
 
              <div id="texto">
                 <p></p>
