--- a/exercicio_array/index.html
+++ b/exercicio_array/index.html
@@ -16,7 +16,7 @@
 
     <main>
         <div id="form">
-            <p>Número (entre 1 e 100): <input type="number" min="0" id="numero" name="numero"> 
+            <p>Número (entre 1 e 100): <input type="number" min="0" id="numero" name="numero" placeholder="Número..."> 
             <input type="button" value="Adicionar" id="add"></p>
             <p><select name="valores" id="valores" size="8"></select></p>
             <input type="button" value=" Finalizar " id="fim">
