--- a/exercicio5/index.html
+++ b/exercicio5/index.html
@@ -20,7 +20,7 @@
         <div id="form">
             <label for="num">Digite um número:</label>
             <form>
-                <input type="number" name="num" id="num" min="0">
+                <input type="number" name="num" id="num" min="0" placeholder="Número...">
                 <input type="button" value="Gerar tabuada" id="confirma">
                 <input type="reset" value="Limpar" id="limp">
             </form>
